[package]
name = "rate-limiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
davisjr = "*"
http = "*"
tokio = { version = "*", features = [ "full" ] }

[dev-dependencies]
serde = "*"
serde_derive = "*"
serde_yaml = "*"
fancy-duration = "*"
